--- a/app/src/main/res/layout/fragment_add_teacher.xml
+++ b/app/src/main/res/layout/fragment_add_teacher.xml
@@ -4,84 +4,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".View.FragmentEditStudent">
+    tools:context=".View.FragmentAddTeacher">
 
     <TextView
-        android:id="@+id/editStudentTV"
+        android:id="@+id/addTeacherTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edytuj studenta"
+        android:text="Dodaj nauczyciela"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/editSSpinner"
-        />
-
-    <Spinner
-        android:id="@+id/editSSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/editStudentTV"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textView3"
+        app:layout_constraintBottom_toTopOf="@id/textView5"
         />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/editSSpinner"
+        app:layout_constraintTop_toBottomOf="@id/addTeacherTV"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/newStudentName2"
-        app:layout_constraintBottom_toTopOf="@id/textView4"
+        app:layout_constraintRight_toLeftOf="@id/newTeacherName"
+        app:layout_constraintBottom_toTopOf="@id/textView6"
         android:text="@string/studentName"
         android:textSize="30dp"
         />
 
     <EditText
-        android:id="@+id/newStudentName2"
+        android:id="@+id/newTeacherName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        app:layout_constraintTop_toBottomOf="@id/editSSpinner"
-        app:layout_constraintLeft_toRightOf="@id/textView3"
+        app:layout_constraintTop_toBottomOf="@id/addTeacherTV"
+        app:layout_constraintLeft_toRightOf="@id/textView5"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/newStudentLastName2"
+        app:layout_constraintBottom_toTopOf="@id/newTeacherLastName"
         />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
+        app:layout_constraintTop_toBottomOf="@id/textView5"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/newStudentLastName2"
-        app:layout_constraintBottom_toTopOf="@id/editStudentButton"
+        app:layout_constraintRight_toLeftOf="@id/newTeacherLastName"
+        app:layout_constraintBottom_toTopOf="@id/addTeacherButton"
         android:text="@string/studentLastName"
         android:textSize="30dp"
         />
 
     <EditText
-        android:id="@+id/newStudentLastName2"
+        android:id="@+id/newTeacherLastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        app:layout_constraintTop_toBottomOf="@id/newStudentName2"
-        app:layout_constraintLeft_toRightOf="@id/textView4"
-        app:layout_constraintBottom_toTopOf="@id/editStudentButton"
+        app:layout_constraintTop_toBottomOf="@id/newTeacherName"
+        app:layout_constraintLeft_toRightOf="@id/textView6"
+        app:layout_constraintBottom_toTopOf="@id/addTeacherButton"
         app:layout_constraintRight_toRightOf="parent"
         />
 
     <Button
-        android:id="@+id/editStudentButton"
+        android:id="@+id/addTeacherButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newStudentLastName2"
+        app:layout_constraintTop_toBottomOf="@id/newTeacherLastName"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/edit"
+        android:text="@string/add"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
