--- a/app/src/main/res/layout/fragment_edit_teacher.xml
+++ b/app/src/main/res/layout/fragment_edit_teacher.xml
@@ -4,82 +4,82 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".View.FragmentEditStudent">
+    tools:context=".View.FragmentEditTeacher">
 
     <TextView
-        android:id="@+id/editStudentTV"
+        android:id="@+id/editTeacherTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edytuj studenta"
+        android:text="Edytuj nauczyciela"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/editSSpinner"
+        app:layout_constraintBottom_toTopOf="@id/editTSpinner"
         />
 
     <Spinner
-        android:id="@+id/editSSpinner"
+        android:id="@+id/editTSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/editStudentTV"
+        app:layout_constraintTop_toBottomOf="@id/editTeacherTV"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textView3"
+        app:layout_constraintBottom_toTopOf="@id/textView7"
         />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/editSSpinner"
+        app:layout_constraintTop_toBottomOf="@id/editTSpinner"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/newStudentName2"
-        app:layout_constraintBottom_toTopOf="@id/textView4"
+        app:layout_constraintRight_toLeftOf="@id/newTeacherName2"
+        app:layout_constraintBottom_toTopOf="@id/textView8"
         android:text="@string/studentName"
         android:textSize="30dp"
         />
 
     <EditText
-        android:id="@+id/newStudentName2"
+        android:id="@+id/newTeacherName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        app:layout_constraintTop_toBottomOf="@id/editSSpinner"
-        app:layout_constraintLeft_toRightOf="@id/textView3"
+        app:layout_constraintTop_toBottomOf="@id/editTSpinner"
+        app:layout_constraintLeft_toRightOf="@id/textView7"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/newStudentLastName2"
+        app:layout_constraintBottom_toTopOf="@id/newTeacherLastName2"
         />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
+        app:layout_constraintTop_toBottomOf="@id/textView7"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/newStudentLastName2"
-        app:layout_constraintBottom_toTopOf="@id/editStudentButton"
+        app:layout_constraintRight_toLeftOf="@id/newTeacherLastName2"
+        app:layout_constraintBottom_toTopOf="@id/editTeacherButton2"
         android:text="@string/studentLastName"
         android:textSize="30dp"
         />
 
     <EditText
-        android:id="@+id/newStudentLastName2"
+        android:id="@+id/newTeacherLastName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        app:layout_constraintTop_toBottomOf="@id/newStudentName2"
-        app:layout_constraintLeft_toRightOf="@id/textView4"
-        app:layout_constraintBottom_toTopOf="@id/editStudentButton"
+        app:layout_constraintTop_toBottomOf="@id/newTeacherName2"
+        app:layout_constraintLeft_toRightOf="@id/textView8"
+        app:layout_constraintBottom_toTopOf="@id/editTeacherButton2"
         app:layout_constraintRight_toRightOf="parent"
         />
 
     <Button
-        android:id="@+id/editStudentButton"
+        android:id="@+id/editTeacherButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newStudentLastName2"
+        app:layout_constraintTop_toBottomOf="@id/newTeacherLastName2"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/edit"
         />
