--- a/app/src/main/res/layout/fragment_choosen_student.xml
+++ b/app/src/main/res/layout/fragment_choosen_student.xml
@@ -36,8 +36,30 @@
         app:layout_constraintTop_toBottomOf="@id/studentsGradesBtn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/editStudentButton2"
         android:text="@string/yoursCourses"
+        />
+
+    <Button
+        android:id="@+id/editStudentButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/deleteStudentButton"
+        app:layout_constraintTop_toBottomOf="@id/studentsCoursesBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/edit"
+        />
+
+    <Button
+        android:id="@+id/deleteStudentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/editStudentButton2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/studentsCoursesBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/delete"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
