--- a/app/src/main/res/layout/one_row_teachers_courses.xml
+++ b/app/src/main/res/layout/one_row_teachers_courses.xml
@@ -4,32 +4,25 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/studentIndex"
+        android:id="@+id/courseId"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
 
     <TextView
-        android:id="@+id/studentNameOR"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        />
-
-    <TextView
-        android:id="@+id/studentLastNameOR"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        />
-
-    <Button
-        android:id="@+id/goToStudentView"
+        android:id="@+id/courseNameTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
-        android:text="Przejdź"
+        />
+
+    <Button
+        android:id="@+id/goToParticipantsBtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:text="U"
         />
 
 </LinearLayout>
