--- a/app/src/main/res/layout/one_row_teachers_courses.xml
+++ b/app/src/main/res/layout/one_row_teachers_courses.xml
@@ -11,6 +11,13 @@
         />
 
     <TextView
+        android:id="@+id/teacherId"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        />
+
+    <TextView
         android:id="@+id/courseNameTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
