--- a/app/src/main/res/layout/one_row_not_participants.xml
+++ b/app/src/main/res/layout/one_row_not_participants.xml
@@ -4,36 +4,25 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/courseNameTV"
+        android:id="@+id/notPName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="4"
+        />
+
+    <TextView
+        android:id="@+id/notPLastName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="4"
         />
 
     <Button
-        android:id="@+id/goToAddParticipant"
+        android:id="@+id/addParticipant"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:text="Dodaj"
-        android:textSize="10dp"
-        />
-
-    <Button
-        android:id="@+id/goToParticipantsBtn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:text="Uczestnicy"
-        android:textSize="10dp"
-        />
-
-    <Button
-        android:id="@+id/deleteCourse"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="D"
         />
 
 </LinearLayout>
