--- a/app/src/main/res/layout/fragment_choosen_teacher.xml
+++ b/app/src/main/res/layout/fragment_choosen_teacher.xml
@@ -46,7 +46,18 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TeachersCourses"
+        app:layout_constraintBottom_toTopOf="@id/yoursTests"
+        />
+
+    <Button
+        android:id="@+id/yoursTests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sprawdziany"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/deleteTeacher"
+        app:layout_constraintTop_toBottomOf="@id/GradesReport"
         />
 
     <Button
