--- a/app/src/main/res/layout/one_row_teachers_courses.xml
+++ b/app/src/main/res/layout/one_row_teachers_courses.xml
@@ -29,11 +29,11 @@
         />
 
     <Button
-        android:id="@+id/deleteCourse"
+        android:id="@+id/goToAddTest"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="D"
+        android:text="DT"
         />
 
 </LinearLayout>
