--- a/app/src/main/res/layout/fragment_add_test.xml
+++ b/app/src/main/res/layout/fragment_add_test.xml
@@ -4,74 +4,72 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".View.FragmentEditStudent">
+    tools:context=".View.FragmentAddTest">
 
     <TextView
-        android:id="@+id/editStudentTV"
+        android:id="@+id/dodajTestTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edytuj studenta"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textView3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/dataTV"
+        android:text="Dodaj Test"
         />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/dataTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/editStudentTV"
+        android:text="Data:"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/newStudentName2"
-        app:layout_constraintBottom_toTopOf="@id/textView4"
-        android:text="@string/studentName"
-        android:textSize="30dp"
+        app:layout_constraintRight_toLeftOf="@id/dataET"
+        app:layout_constraintBottom_toTopOf="@id/opisTV"
+        app:layout_constraintTop_toBottomOf="@id/dodajTestTV"
         />
 
     <EditText
-        android:id="@+id/newStudentName2"
+        android:id="@+id/dataET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        app:layout_constraintTop_toBottomOf="@id/editStudentTV"
-        app:layout_constraintLeft_toRightOf="@id/textView3"
+        app:layout_constraintLeft_toRightOf="@id/dataTV"
+        app:layout_constraintBottom_toTopOf="@id/opisTV"
+        app:layout_constraintTop_toBottomOf="@id/dodajTestTV"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/newStudentLastName2"
+        android:ems="10"
         />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/opisTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/newStudentLastName2"
-        app:layout_constraintBottom_toTopOf="@id/editStudentButton"
-        android:text="@string/studentLastName"
-        android:textSize="30dp"
+        app:layout_constraintTop_toBottomOf="@id/dataTV"
+        app:layout_constraintRight_toLeftOf="@id/dataET"
+        app:layout_constraintBottom_toTopOf="@id/addTest"
+        android:text="Opis:"
         />
 
     <EditText
-        android:id="@+id/newStudentLastName2"
+        android:id="@+id/opisET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        app:layout_constraintTop_toBottomOf="@id/newStudentName2"
-        app:layout_constraintLeft_toRightOf="@id/textView4"
-        app:layout_constraintBottom_toTopOf="@id/editStudentButton"
+        app:layout_constraintLeft_toRightOf="@id/opisET"
+        app:layout_constraintBottom_toTopOf="@id/addTest"
+        app:layout_constraintTop_toBottomOf="@id/dataET"
         app:layout_constraintRight_toRightOf="parent"
+        android:ems="10"
         />
 
     <Button
-        android:id="@+id/editStudentButton"
+        android:id="@+id/addTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/opisTV"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newStudentLastName2"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/edit"
+        android:text="@string/add"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
