--- a/app/src/main/res/layout/fragment_choosen_student.xml
+++ b/app/src/main/res/layout/fragment_choosen_student.xml
@@ -14,51 +14,39 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/studentsGradesBtn"
-        />
-
-
-    <Button
-        android:id="@+id/studentsGradesBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/witajSTV"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/studentsCoursesBtn"
-        android:text="@string/yoursGrades"
         />
 
     <Button
         android:id="@+id/studentsCoursesBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/studentsGradesBtn"
+        app:layout_constraintTop_toBottomOf="@id/witajSTV"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/editStudentButton2"
+        app:layout_constraintBottom_toTopOf="@id/sTestsBtn"
         android:text="@string/yoursCourses"
         />
 
     <Button
-        android:id="@+id/editStudentButton2"
+        android:id="@+id/sTestsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/deleteStudentButton"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/studentsCoursesBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/edit"
+        app:layout_constraintBottom_toTopOf="@id/deleteStudentButton"
+        android:text="Nadchodzące Testy"
         />
 
     <Button
         android:id="@+id/deleteStudentButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/editStudentButton2"
+        app:layout_constraintTop_toBottomOf="@id/sTestsBtn"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/studentsCoursesBtn"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:text="@string/delete"
         />
 
