--- a/app/src/main/res/layout/one_row_test.xml
+++ b/app/src/main/res/layout/one_row_test.xml
@@ -4,25 +4,19 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/participantNameTV"
+        android:id="@+id/dataTestu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
+        android:minHeight="50dp"
         />
 
     <TextView
-        android:id="@+id/participantLastNameTV"
+        android:id="@+id/opisTestu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
-        />
-
-    <Button
-        android:id="@+id/addGrade"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:text="OCEŃ"
+        android:minHeight="50dp"
         />
 
 
