--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -57,15 +57,6 @@
             app:destination="@id/framgentChooseStudent" />
     </fragment>
     <fragment
-        android:id="@+id/fragmentEditStudent"
-        android:name="com.example.asystentnayczyciela.View.FragmentEditStudent"
-        android:label="fragment_edit_student"
-        tools:layout="@layout/fragment_edit_student" >
-        <action
-            android:id="@+id/action_fragmentEditStudent_to_fragmentChoosenStudent"
-            app:destination="@id/fragmentChoosenStudent" />
-    </fragment>
-    <fragment
         android:id="@+id/fragmentChoosenStudent"
         android:name="com.example.asystentnayczyciela.View.FragmentChoosenStudent"
         android:label="fragment_choosen_student"
@@ -74,11 +65,11 @@
             android:id="@+id/action_fragmentChoosenStudent_to_framgentChooseStudent"
             app:destination="@id/framgentChooseStudent" />
         <action
-            android:id="@+id/action_fragmentChoosenStudent_to_fragmentEditStudent"
-            app:destination="@id/fragmentEditStudent" />
+            android:id="@+id/action_fragmentChoosenStudent_to_fragmentStudentsCourses"
+            app:destination="@id/fragmentStudentsCourses" />
         <action
-            android:id="@+id/action_fragmentChoosenStudent_to_fragmentStudentCourses"
-            app:destination="@id/fragmentStudentCourses" />
+            android:id="@+id/action_fragmentChoosenStudent_to_fragmentStudentsTest"
+            app:destination="@id/fragmentStudentsTest" />
     </fragment>
     <fragment
         android:id="@+id/choosenTeacher"
@@ -89,9 +80,6 @@
             android:id="@+id/action_choosenTeacher_to_fragmentChooseTeacher"
             app:destination="@id/fragmentChooseTeacher" />
         <action
-            android:id="@+id/action_choosenTeacher_to_fragmentEditTeacher"
-            app:destination="@id/fragmentEditTeacher" />
-        <action
             android:id="@+id/action_choosenTeacher_to_fragmentAddCourse"
             app:destination="@id/fragmentAddCourse" />
         <action
@@ -100,6 +88,9 @@
         <action
             android:id="@+id/action_choosenTeacher_to_fragmentReport"
             app:destination="@id/fragmentReport" />
+        <action
+            android:id="@+id/action_choosenTeacher_to_fragmentTeachersTest"
+            app:destination="@id/fragmentTeachersTest" />
     </fragment>
     <fragment
         android:id="@+id/fragmentAddTeacher"
@@ -109,15 +100,6 @@
         <action
             android:id="@+id/action_fragmentAddTeacher_to_fragmentChooseTeacher"
             app:destination="@id/fragmentChooseTeacher" />
-    </fragment>
-    <fragment
-        android:id="@+id/fragmentEditTeacher"
-        android:name="com.example.asystentnayczyciela.View.FragmentEditTeacher"
-        android:label="fragment_edit_teacher"
-        tools:layout="@layout/fragment_edit_teacher" >
-        <action
-            android:id="@+id/action_fragmentEditTeacher_to_choosenTeacher"
-            app:destination="@id/choosenTeacher" />
     </fragment>
     <fragment
         android:id="@+id/fragmentAddCourse"
@@ -142,6 +124,9 @@
         <action
             android:id="@+id/action_fragmentTeachersCourses_to_fragmentParticipants"
             app:destination="@id/fragmentParticipants" />
+        <action
+            android:id="@+id/action_fragmentTeachersCourses_to_fragmentAddTest"
+            app:destination="@id/fragmentAddTest" />
     </fragment>
     <fragment
         android:id="@+id/fragmentNotParticipants"
@@ -186,6 +171,18 @@
             app:destination="@id/fragmentParticipants" />
     </fragment>
     <fragment
+        android:id="@+id/fragmentStudentsCourses"
+        android:name="com.example.asystentnayczyciela.View.FragmentStudentsCourses"
+        android:label="fragment_students_courses"
+        tools:layout="@layout/fragment_students_courses" >
+        <action
+            android:id="@+id/action_fragmentStudentsCourses_to_fragmentChoosenStudent"
+            app:destination="@id/fragmentChoosenStudent" />
+        <action
+            android:id="@+id/action_fragmentStudentsCourses_to_fragmentStudentsGrades"
+            app:destination="@id/fragmentStudentsGrades" />
+    </fragment>
+    <fragment
         android:id="@+id/fragmentReport"
         android:name="com.example.asystentnayczyciela.View.FragmentReport"
         android:label="fragment_report"
@@ -200,19 +197,34 @@
         android:label="fragment_students_grades"
         tools:layout="@layout/fragment_students_grades" >
         <action
-            android:id="@+id/action_fragmentStudentsGrades_to_fragmentStudentCourses"
-            app:destination="@id/fragmentStudentCourses" />
+            android:id="@+id/action_fragmentStudentsGrades_to_fragmentStudentsCourses"
+            app:destination="@id/fragmentStudentsCourses" />
     </fragment>
     <fragment
-        android:id="@+id/fragmentStudentCourses"
-        android:name="com.example.asystentnayczyciela.View.FragmentStudentCourses"
-        android:label="fragment_student_courses"
-        tools:layout="@layout/fragment_student_courses" >
+        android:id="@+id/fragmentAddTest"
+        android:name="com.example.asystentnayczyciela.View.FragmentAddTest"
+        android:label="fragment_add_test"
+        tools:layout="@layout/fragment_add_test" >
         <action
-            android:id="@+id/action_fragmentStudentCourses_to_fragmentChoosenStudent"
+            android:id="@+id/action_fragmentAddTest_to_fragmentTeachersCourses"
+            app:destination="@id/fragmentTeachersCourses" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentTeachersTest"
+        android:name="com.example.asystentnayczyciela.View.FragmentTeachersTest"
+        android:label="fragment_teachers_test"
+        tools:layout="@layout/fragment_teachers_test" >
+        <action
+            android:id="@+id/action_fragmentTeachersTest_to_choosenTeacher"
+            app:destination="@id/choosenTeacher" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentStudentsTest"
+        android:name="com.example.asystentnayczyciela.View.FragmentStudentsTest"
+        android:label="fragment_students_test"
+        tools:layout="@layout/fragment_students_test" >
+        <action
+            android:id="@+id/action_fragmentStudentsTest_to_fragmentChoosenStudent"
             app:destination="@id/fragmentChoosenStudent" />
-        <action
-            android:id="@+id/action_fragmentStudentCourses_to_fragmentStudentsGrades"
-            app:destination="@id/fragmentStudentsGrades" />
     </fragment>
 </navigation>
