--- a/app/src/main/res/layout/one_row_grades.xml
+++ b/app/src/main/res/layout/one_row_grades.xml
@@ -21,4 +21,14 @@
         android:gravity="top|left"
         />
 
+    <TextView
+        android:id="@+id/gradeDateTV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:textSize="7dp"
+        android:minHeight="50dp"
+        android:gravity="center|center"
+        />
+
 </LinearLayout>
