--- a/app/src/main/res/layout/one_row_teachers.xml
+++ b/app/src/main/res/layout/one_row_teachers.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="3"
         android:text="Przejdź"
+        android:textSize="8dp"
         />
 
 
